--- a/package.json
+++ b/package.json
@@ -14,7 +14,22 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
+    "formidable": "^2.0.1",
+    "jimp": "^0.16.1",
+    "mongoose": "^6.4.4",
+    "nodemailer": "^6.7.7",
+    "passport": "^0.6.0",
+    "uid": "^2.0.0"
   }
 }
